﻿drkns 06.01.2014 17:13:09 +0200 - build 3763

1. Используем рекомендуемые MS проверки версии ОС вместо deprecated GetVersionEx.

2. Используем нативный thread_local в gcc.

drkns 05.01.2014 22:55:23 +0200 - build 3762

1. VC10.

drkns 05.01.2014 19:39:38 +0200 - build 3761

1. 0002553: Ненужные хоткеи F3/F4 в история команд (Alt-F8)

shmuel 05.01.2014 19:22:10 +0200 - build 3760

1. Рефакторинг кастомной сортировки.

drkns 03.01.2014 13:37:10 +0200 - build 3759

1. Продолжение 3756: убраны аллокации и немного упрощен код.

drkns 03.01.2014 11:23:21 +0200 - build 3758

1. Уточнение 3752.

t-rex 03.01.2014 11:08:14 +0200 - build 3757

1. мемори лик в 3756.

t-rex 03.01.2014 04:59:02 +0200 - build 3756

1. Фикс кастомной сортировки, уродливо но чтоб намёк был понят.

drkns 03.01.2014 04:00:21 +0200 - build 3755

1. "Восстановим" кастомные режимы сортировки.

drkns 02.01.2014 18:06:05 +0200 - build 3754

1. Оптимизация перемещения внутренних классов.

drkns 02.01.2014 04:33:52 +0200 - build 3753

1. Продолжение 3752.

drkns 02.01.2014 02:55:55 +0200 - build 3752

1. Оптимизация, аналогичная 3401: каждый элемент файловой панели занимает примерно на 200 байт меньше памяти.

drkns 31.12.2013 16:06:31 +0200 - build 3751

1. Рефакторинг.

2. Уточнение 3749.

3. Нажатие ShiftF9 всегда принудительно сохраняет настройки, "не занимаясь эвристикой и оптимизацией".

drkns 31.12.2013 03:05:45 +0200 - build 3750

1. Нажатие F4 в меню групп масок приводило к падению.

drkns 31.12.2013 00:38:12 +0200 - build 3749

1. Рефакторинг.

drkns 30.12.2013 21:25:21 +0200 - build 3748

1. Рефакторинг.

drkns 26.12.2013 19:36:19 +0200 - build 3747

1. Уточнение 3746.

drkns 26.12.2013 01:21:42 +0200 - build 3746

1. Рефакторинг.

drkns 21.12.2013 22:00:20 +0200 - build 3745

1. Уточнение 3744.1.

drkns 21.12.2013 21:20:13 +0200 - build 3744

1. Рефакторинг.

2. Утечки памяти при запуске с ключом /v или /e.

drkns 15.12.2013 04:54:32 +0200 - build 3743

1. Уточнение 3738.
