@@ -1,4 +1,8 @@
-﻿drkns 06.01.2014 17:13:09 +0200 - build 3763
+﻿drkns 08.01.2014 19:43:29 +0200 - build 3764
+
+1. После 3751 некоррекно отображались скрытые файлы на панели плагина.
+
+drkns 06.01.2014 17:13:09 +0200 - build 3763
 
 1. Используем рекомендуемые MS проверки версии ОС вместо deprecated GetVersionEx.
 
